--- a/config.json
+++ b/config.json
@@ -89,6 +89,22 @@
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "name": "爱坤资源站"
     },
+    "guangsu": {
+      "api": "https://api.guangsuapi.com/api.php/provide/vod",
+      "name": "光速资源站"
+    },
+    "wolong": {
+      "api": "https://collect.wolongzy.cc/api.php/provide/vod",
+      "name": "卧龙资源站"
+    },
+    "tianya": {
+      "api": "https://tyyszy.com/api.php/provide/vod",
+      "name": "天涯资源站"
+    },
+    "wangwang": {
+      "api": "https://api.wwzy.tv/api.php/provide/vod",
+      "name": "旺旺短剧"
+    },
     "xiaomaomi": {
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
