--- a/config.json
+++ b/config.json
@@ -112,9 +112,48 @@
             "name": "优酷资源"
         },          
         "lbav": {
-            "name": "乐播资源",
             "api": "https://lbapi9.com/api.php/provide/vod",
-            "detail": ""
-        }       
+            "name": "乐播资源",
+        }，
+        "1080": {
+            "api": "https://api.1080zyku.com/inc/api_mac10.php",
+            "name": "1080源站"
+       },
+        "guangsu": {
+           "api": "https://api.guangsuapi.com/api.php/provide/vod",
+           "name": "光速资源站"
+      },
+       "xiaomaomi": {
+           "api": "https://zy.xmm.hk/api.php/provide/vod",
+           "name": "小猫咪资源"
+    }，
+        "qiqiqiqi": {
+            "api": "https://www.qiqidys.com/api.php/provide/vod/",
+            "name": "七七影视"
+        },
+        "kauicheziyuan": {
+            "api": "https://caiji.kuaichezy.org/api.php/provide",
+            "name": "快车资源阿"
+        },
+        "xinlangaa": {
+            "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod",
+            "name": "新浪资源阿"
+        },
+         "youzhidianying": {
+            "api": "https://api.yzzy-api.com/inc/ldg_api_all.php/provide/vod",
+            "name": "优质资源库1080高清"
+        },
+        "iqiyi": {
+            "api": "https://www.iqiyizyapi.com/api.php/provide/vod",
+            "name": "iqiyi资源"
+        },
+        "yingshigongchang": {
+            "api": "https://cj.lziapi.com/api.php/provide/vod/",
+            "name": "影视工厂"
+        },
+        "fantuanyingshi": {
+            "api": "https://www.fantuan.tv/api.php/provide/vod/",
+            "name": "饭团影视"
+        }
     }
 }
